# ic-rusqlite

./: .gitignore  Cargo.toml  README.md  backup.html  basic_example.html  benchmarks.html  build.rs  ci.html  complex_queries.html  creating_canister.html  index.html  installation.html  introduction.html  large_database.html  migrations.html  pagination.html  performance.html  performance_tips.html  pragma_settings.html  prepare.sh  print.html  searchindex.js  toc.html  toc.js  usecases.html
.cargo/: config.toml
.github/workflows/: build-sqlite.yml  build_check.yml  ci.yml  pages.yml
docs/src/: SUMMARY.md  backup.md  basic_example.md  benchmarks.md  ci.md  complex_queries.md  creating_canister.md  does_and_donts.md  installation.md  introduction.md  large_database.md  large_datgabase.md  migrations.md  pagination.md  performance.md  performance_tips.md  pragma_settings.md  usecases.md
examples/backend/: Cargo.toml  README.md  build.sh  can.did  dfx.json  test.sh
examples/backend/src/: lib.rs
lib/: download.sh  libsqlite3.a.sha256
src/: lib.rs  vfs.rs
