[package]
name = "ic-rusqlite"
version = "0.1.0"
edition = "2024"


[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
candid = "0.10.16"
ic-cdk = "0.18.3"
hex = "0.4.3"
serde = "1.0.164"
serde_json = "1.0.142"

ic-stable-structures = "0.7.0"
ic-wasi-polyfill = {git = "https://github.com/wasm-forge/ic-wasi-polyfill.git", package="ic-wasi-polyfill", rev = "6035e4dbc7cfd22301d4c718282b65ef180baca8"}

sqlite-vfs = { version = "0.2" }
rusqlite = {version = "0.37.0", features = ["bundled", "wasm32-wasi-vfs"] }
anyhow = "1.0.98"
rand = "0.9.2"

[build-dependencies]
glob = "0.3"
env = "1.0"
