[package]
name = "ic-rusqlite"
version = "0.4.3"
edition = "2024"
keywords = ["internet-computer", "wasi", "sqlite"]
description = "The project provides easy-to-use library to enable SQLite in your Internet Computer canister."
license = "MIT"
repository = "https://github.com/wasm-forge/ic-rusqlite"

include = [
    "src/**",
    "lib/*.a*",
    "Cargo.toml",
    "build.rs",
    "README.md",
]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.18.7"
hex = "0.4.3"
serde = "1.0.164"
serde_json = "1.0.143"

ic-stable-structures = "0.7.0"
ic-wasi-polyfill = {version = "0.11.0"}

rusqlite = { version = "0.37", optional = true}

anyhow = "1.0.99"
rand = "0.9.2"

[build-dependencies]
glob = "0.3.3"
env = "1.0"

[features]

# Activate this feature to compile the sqlite3 from source code
bundled = ["rusqlite", "rusqlite/bundled", "rusqlite/wasm32-wasi-vfs"]

# Activate this feature to link a precompiled version of sqlite3
precompiled = ["rusqlite"]
