[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10.14"
hex = "0.4.3"
ic-cdk = "0.18.5"


# Use this option to compile sqlite3.c, you will need to install WASI-SDK
ic-rusqlite = { path = "../../../ic-rusqlite"}

# Use this option to link a precompiled sqlite3.c that is found in distributed with this create
#ic-rusqlite = { path = "../../../ic-rusqlite", default-features = false, features = ["precompiled"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
